Atualização + estilização da página de lista de presentes

--- a/frontend/gift-list.html
+++ b/frontend/gift-list.html
@@ -11,11 +11,9 @@
   <section class="cabecalho">
     <img class="img" src="./assets/images/rodrigo_karina-brasao.png" alt="Brasão Rodrigo e Karina">
     <h1>Nossa lista de casamento</h1>
-    <p>
-      Querido(a) convidado(a), seja bem-vindo(a) à nossa lista de presentes. <br> Decidimos preparar uma lista de presentes divertida! <br>
-      Pensamos em tudo com muito carinho para que você se sinta à vontade para nos presentear com o que sentir vontade. Os presentes são simbólicos, você pode escolher qual(is) e quantos quiser, e os valores serão convertidos em $$$ para utilizarmos em nossa viagem de lua de mel e em nosso dia a dia.
-      Todos os valores podem ser parcelados, como se fosse uma compra online. <br>
-      De qualquer forma, nosso melhor presente  é a sua presença nesse momento especial.
+    <p class="introducao">
+      Querido(a) convidado(a), seja bem-vindo(a) à nossa lista de presentes. <br><br> Decidimos preparar uma lista e pensamos em tudo com muito carinho para que você se sinta à vontade para nos presentear conforme o seu desejo. <br>
+      De qualquer forma, nosso melhor presente é a sua presença nesse momento especial.
     </p>
   </section>
   <div class="containerGifts">
