--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
         <div class="inside-text">
           <p class="verse">“<em>E, acima de tudo, tenham amor, pois o amor une perfeitamente todas as coisas.</em>” - Cl. 3:14</p> 
           <h1>Karina e Rodrigo</h1>
-          <p class="textInvite">Convidam para a celebração do seu casamento a ser realizada em</p>
+          <p class="textInvite">Convidam para a celebração de seu casamento a ser realizada em</p>
         </div>
         <div class="dataHorario">
           <div id="dateweek">
